# franklin

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FEATURES_V2.1.md  README.md  TECHNICAL_ISSUES_V2.1.md  UI-IMPROVEMENTS.md  VERSION  install-design-complete  ui-design-reference  update-all.sh
.github/workflows/: ci.yml  release.yml
franklin/: pyproject.toml
franklin/config/: mise.toml  starship.toml
franklin/src/: bootstrap.sh  install.sh
franklin/src/lib/: constants.py  main.py  motd.py  ui.py  ui.sh
franklin/templates/: zshrc.zsh
src/: .zshrc  bootstrap.sh  franklin  install.sh  starship.toml  update-all.sh
src/lib/: README.md  colors.sh  install_debian.sh  install_fedora.sh  install_helpers.sh  install_macos.sh  motd-helpers.zsh  motd.zsh  notify.zsh  nvm.zsh  os_detect.sh  os_detect.zsh  ui.sh  versions.sh
src/scripts/: build_release.sh  check_versions.sh  current_franklin_version.sh  release.sh  write_version_file.sh
test/: _os_detect_tests.sh  bootstrap-tests.sh  motd-tests.sh  test_cli.py  test_install.sh  ui-demo.sh
