[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "franklin-cli"
version = "2.0.4"
description = "A modern Zsh environment manager with cross-platform support"
authors = [
    {name = "Jeremy Fuksa", email = "jeremy.fuksa@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "typing-extensions>=4.0.0",
]

[project.scripts]
franklin = "lib.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["lib*"]
